--- a/2-page.html
+++ b/2-page.html
@@ -94,7 +94,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/spacechill.jpg" alt="spacechillout album img"
+                                    <img src="./img/albums/spacechill.avif" alt="spacechillout album img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -123,7 +123,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/coldmaster.jpg" alt="cold moment album img"
+                                    <img src="./img/albums/coldmaster.avif" alt="cold moment album img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -153,7 +153,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/iloveit.jpg" alt="I Love It album img" loading="lazy"
+                                    <img src="./img/albums/iloveit.avif" alt="I Love It album img" loading="lazy"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -184,7 +184,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/newyear.jpg" alt="Beat Pack NY album img" loading="lazy"
+                                    <img src="./img/albums/newyear.avif" alt="Beat Pack NY album img" loading="lazy"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -215,7 +215,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/tranquility.jpg" alt="Tranquility img" loading="lazy"
+                                    <img src="./img/albums/tranquility.avif" alt="Tranquility img" loading="lazy"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
