--- a/3-page.html
+++ b/3-page.html
@@ -94,7 +94,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/lofithemevol3.jpg" alt="Lo-Fi Theme Vol.3 album img"
+                                    <img src="./img/albums/lofithemevol3.avif" alt="Lo-Fi Theme Vol.3 album img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -123,7 +123,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/aquarius.jpg" alt="AQUARIUS album img"
+                                    <img src="./img/albums/aquarius.avif" alt="AQUARIUS album img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -153,7 +153,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/umadness.jpg" alt="U  Madness album img" loading="lazy"
+                                    <img src="./img/albums/umadness.avif" alt="U  Madness album img" loading="lazy"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -184,7 +184,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/lofithemevol2.jpg" alt="Lo-Fi Theme Vol.2 album img"
+                                    <img src="./img/albums/lofithemevol2.avif" alt="Lo-Fi Theme Vol.2 album img"
                                         loading="lazy" class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -215,7 +215,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/ambienty.jpg" alt="Ambienty img" loading="lazy"
+                                    <img src="./img/albums/ambienty.avif" alt="Ambienty img" loading="lazy"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
