--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/December.png" alt="december album img"
+                                    <img src="./img/albums/December.avif" alt="december album img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -124,7 +124,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/wondthings.jpg" alt="wonderful things album img"
+                                    <img src="./img/albums/wondthings.avif" alt="wonderful things album img"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -154,7 +154,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/capricious.jpg" alt="Capricious album img" loading="lazy"
+                                    <img src="./img/albums/capricious.avif" alt="Capricious album img" loading="lazy"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -185,7 +185,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/perfworld.jpg" alt="Perfect World album img" loading="lazy"
+                                    <img src="./img/albums/perfworld.avif" alt="Perfect World album img" loading="lazy"
                                         class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
@@ -216,7 +216,7 @@
                             <div class="main_album-block">
                                 <div class="main_album-img_wrapper">
                                     <div class="main_album-img-shadow"></div>
-                                    <img src="./img/albums/whenalliswell.jpg" alt="When All Is Well album img"
+                                    <img src="./img/albums/whenalliswell.avif" alt="When All Is Well album img"
                                         loading="lazy" class="main_album-img">
                                 </div>
                                 <div class="main_album-info">
