--- a/2-page.html
+++ b/2-page.html
@@ -24,7 +24,7 @@
     <meta property="og:site_name" content="SPACON Music">
     <!-- Прочие мета-теги -->
     <title>SPACON Music</title>
-    <script src="https://vk.com/js/api/openapi.js?169"></script>
+    <script src="https://vk.com/js/api/openapi.js?169" data-key="delete-script"></script>
 </head>
 
 <body>
